Closed Bug 1185840 Opened 9 years ago Closed 9 years ago

nsRegion::ToString() should print the string literal instead of the address of the region

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: TYLin, Assigned: TYLin)

Details

Attachments

(1 file)

The function prints a region like [14,118,87,153; 14,218,87,253].
Attachment #8636445 - Flags: review?(roc)
Assignee: nobody → tlin
https://hg.mozilla.org/mozilla-central/rev/0d9c72826839
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: