Bug 1185840 - Make nsRegion::ToString() print string literal. r=roc

The function prints a region like [14,118,87,153; 14,218,87,253].

--HG--
extra : commitid : 4xBTzphxhS